--- a/styles.css
+++ b/styles.css
@@ -9,6 +9,7 @@ h1 {
     color: white;
     margin: 0;
     padding: 16px;
+    font-size: 2.5em;
 }
 h2, h3 {
     
@@ -55,9 +56,48 @@ p {
     box-shadow: 0 4px 4px #27031e;
 } */
 
-.content-container {
+
+.card-container {
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+    flex-wrap: wrap;
+    margin: 8px;
+}
+.card {
     background-color: white;
-    margin: 10px;
+    margin: 8px;
+    border-radius: 6px;
+}
+.card-header {
+    background-image: linear-gradient(to right, #687286, #ffffff);
+    border-radius: 6px 6px 0 0;
+    margin: 0;
+    color: white;
+    text-shadow: 0 2px 2px #414855;
+}
+.card-header > h2 {
     padding: 16px;
-    border-radius: 4px;
+}
+.card-content {
+    padding: 16px;
+}
+.card-content > img {
+    width: 90%;
+    display: block;
+    margin: 8px auto 8px auto;
+}
+
+@media only screen and (min-width: 800px) {
+    .card-container {
+        align-items: center;
+    }
+    .card {
+        width: 800px;
+    }
+    .card-content > img {
+        width: 22%;
+        float: left;
+        padding: 8px;
+    }
 }
